--- a/compose.yaml
+++ b/compose.yaml
@@ -14,3 +14,15 @@ services:
       - POSTGRES_DB=test_spring
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    deploy:
+      resources:
+        limits:
+          cpus: "0.2"
+          memory: 512M
+
+
+
+volumes:
+  postgres_data:
