--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 spring.application.name=spring-api
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 spring.profiles.active=dev
+## Ignore default spring security configuration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/test_spring
 spring.datasource.username=docker
 spring.datasource.password=docker
-
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+## Migrations
+#spring.flyway.enabled=true
+#spring.flyway.locations=classpath:db/migration
+#spring.flyway.baseline-on-migrate=true
+#spring.flyway.baseline-version=1
