--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,14 @@ spring.profiles.active=dev
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_spring
+spring.datasource.url=jdbc:postgresql://localhost:5432/docker
 spring.datasource.username=docker
 spring.datasource.password=docker
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+
 
 ## Migrations
 #spring.flyway.enabled=true
