--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,7 @@ services:
   postgres:
     image: postgres:16.1-alpine3.19
     container_name: postgres_test
+    network_mode: host
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 5s
@@ -11,9 +12,7 @@ services:
     environment:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=docker
-      - POSTGRES_DB=test_spring
-    ports:
-      - "5432:5432"
+      - POSTGRES_DB=docker
     volumes:
       - postgres_data:/var/lib/postgresql/data
     deploy:
