--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,18 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+<!--
+Swagger
+-->
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.3</version>
+		</dependency>
+
+<!--	|||||||||||||||||||||||	-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
